--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -116,7 +116,7 @@
             <a href="/products?filter=replacement-bulbs">Bulbs</a>
             <a href="/products?filter=merchandise">Merchandise</a>
             <a href="/products?filter=products-we-love">Products We Love</a>
-            <a href="/certified-refurbished">Refurbished Equipment</a>
+            <a href="/pages/certified-refurbished">Refurbished Equipment</a>
           </div>
           <div class="fl-col">
             <div class="fl-head">Learn</div>
