--- a/sections/home-template.liquid
+++ b/sections/home-template.liquid
@@ -24,21 +24,21 @@
 
 <section class="section-three-panels">
     <div class="three-panels">
-        <a href="/infrared-saunas" class="three-panel">
+        <a href="/pages/infrared-saunas" class="three-panel">
             <div class="three-panel-inset-text">
                 <h2>Infrared Saunas</h2>
                 <div class="bold-link bold-link-white arrow-link">Explore</div>
             </div>
             <img src="{{ 'home-infrared-saunas.jpg' | asset_url }}" alt="" loading="lazy" />
         </a>
-        <a href="/targeted-therapy" class="three-panel">
+        <a href="/pages/targeted-therapy" class="three-panel">
             <div class="three-panel-inset-text">
                 <h2>Targeted Therapy</h2>
                 <div class="bold-link bold-link-white arrow-link">Explore</div>
             </div>
             <img src="{{ 'home-targeted-therapy.jpg' | asset_url }}" alt="" loading="lazy" />
         </a>
-        <a href="/sauna-components" class="three-panel">
+        <a href="/pages/sauna-components" class="three-panel">
             <div class="three-panel-inset-text">
                 <h2>Sauna Components</h2>
                 <div class="bold-link bold-link-white arrow-link">Explore</div>
@@ -48,22 +48,6 @@
     </div>
 </section>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <div class="two-colsBG" style="background-image:url({{ 'home-technology-canyon.jpg' | asset_url }});">
 <div class="two-cols two-cols-wide">
     <div class="col">
@@ -72,9 +56,6 @@
     <div class="col">
         <div class="tcw-text">
             <cms id='cms2'>
-
-
-
 
 <h2 class="alignLeft">Technology That Channels Nature</h2>
 <p>We dive deep into the research to ensure our saunas optimize the body’s most powerful processes for repairing and relaxing.</p>
@@ -86,7 +67,6 @@
 
 <div class="two-cols two-cols-wide tc-reverse">
     <div class="col">
-
         
         <img src="{{ 'home-balance.jpg' | asset_url }}" alt="home Balance" loading="lazy" />
     </div>
@@ -113,7 +93,7 @@
     </div>
 </div>
 
-<div class="tanBG noMargin">
+<div class="tanBG noMargin home ">
 <h2>Our Customers Love Us</h2>
 <div class="rc-arrows">
 
@@ -130,7 +110,7 @@
                 <div class="review-title etica">M.S., L.Ac, Founder of Kresser Institute</div>
             </div>
         </div>
-        <div class="review-text etica">I’m convinced that saunas are one of the most potent tools available to us for optimizing health and extending lifespan.</div>
+        <div class="review-text etica"><p>I’m convinced that saunas are one of the most potent tools available to us for optimizing health and extending lifespan.</p></div>
 
     </div>
 
@@ -143,7 +123,7 @@
                 <div class="review-title etica">NFL Super Bowl Champion</div>
             </div>
         </div>
-        <div class="review-text etica">With this season’s COVID restrictions, NFL players have been unable to use their team’s sauna. That reality, coupled with its unbeatably low EMF levels, make owning my very own Faraday Sauna and Photon a lifesaver. I am grateful for this quality product made by SaunaSpace!</div>
+        <div class="review-text etica"><p>With this season’s COVID restrictions, NFL players have been unable to use their team’s sauna. That reality, coupled with its unbeatably low EMF levels, make owning my very own Faraday Sauna and Photon a lifesaver. I am grateful for this quality product made by SaunaSpace!</p></div>
     </div>
 
     <div class="rc-box">
@@ -155,7 +135,7 @@
                 <div class="review-title etica">Olympic Swimmer, Actor</div>
             </div>
         </div>
-        <div class="review-text etica">Having my SaunaSpace Faraday in my bedroom has been an absolute game changer for me. Since I got it I have noticed an amazing improvement in how I feel, my recovery time from workouts has been cut in half and my skin is glowing...</div>
+        <div class="review-text etica"><p>Having my SaunaSpace Faraday in my bedroom has been an absolute game changer for me. Since I got it I have noticed an amazing improvement in how I feel, my recovery time from workouts has been cut in half and my skin is glowing...</p></div>
     </div>
 
     <div class="rc-box">
@@ -167,7 +147,7 @@
                 <div class="review-title etica">Author</div>
             </div>
         </div>
-        <div class="review-text etica">I have used several other saunas for both myself and my son who is recovered from autism. No other gave me the results or the same feeling of relief and relaxation like this. With SaunaSpace, I experience an almost immediate reduction in inflammation and a faster sweating response than with other saunas.</div>
+        <div class="review-text etica"><p>I have used several other saunas for both myself and my son who is recovered from autism. No other gave me the results or the same feeling of relief and relaxation like this. With SaunaSpace, I experience an almost immediate reduction in inflammation and a faster sweating response than with other saunas.</p></div>
     </div>
 
     <div class="rc-box">
@@ -179,7 +159,7 @@
                 <div class="review-title etica">Verified Buyer</div>
             </div>
         </div>
-        <div class="review-text etica">Amazing daily sweat—I love my Luminati! I get a daily dripping wet sweat in there for daily detox, amazing! It is easy to set up, easy to move and simple to use. Do it!</div>
+        <div class="review-text etica"><p>Amazing daily sweat—I love my Luminati! I get a daily dripping wet sweat in there for daily detox, amazing! It is easy to set up, easy to move and simple to use. Do it!</p></div>
     </div>
 
     <div class="rc-box">
@@ -191,7 +171,7 @@
                 <div class="review-title etica">MD, Founder of The Wahls Protocol</div>
             </div>
         </div>
-        <div class="review-text etica">I am still very much enjoying my sauna most mornings! I definitely prefer the incandescent lamp heat over the far-infrared heaters in my old cabinet sauna.</div>
+        <div class="review-text etica"><p>I am still very much enjoying my sauna most mornings! I definitely prefer the incandescent lamp heat over the far-infrared heaters in my old cabinet sauna.</p></div>
     </div>
 
     <div class="rc-box">
@@ -203,9 +183,9 @@
                 <div class="review-title etica">Verified Buyer</div>
             </div>
         </div>
-        <div class="review-text etica">My latest addition to my natural healing toolbox 🔧⛏🔨☺️</br/>
+        <div class="review-text etica"><p>My latest addition to my natural healing toolbox 🔧⛏🔨☺️</br/>
 
-        Incandescent Single Light Panel near-infrared heat and light therapy.</div>
+        Incandescent Single Light Panel near-infrared heat and light therapy.</p></div>
     </div>
 
     <div class="rc-box">
@@ -217,7 +197,7 @@
                 <div class="review-title etica">Verified Buyer</div>
             </div>
         </div>
-        <div class="review-text etica">Great portable red light therapy lamp. Very well-made. Not sure who loves it more, my husband and I or our cat. :)</div>
+        <div class="review-text etica"><p>Great portable red light therapy lamp. Very well-made. Not sure who loves it more, my husband and I or our cat. :)</p></div>
     </div>
 
     <div class="rc-box">
@@ -229,7 +209,7 @@
                 <div class="review-title etica">Verified Buyer</div>
             </div>
         </div>
-        <div class="review-text etica">This is hands down the number one health hack I have tried to date.</div>
+        <div class="review-text etica"><p>This is hands down the number one health hack I have tried to date.</p></div>
     </div>
 
     <div class="rc-box">
@@ -242,7 +222,7 @@
             </div>
             </div>
         </div>
-        <div class="review-text etica">I have to say never in my wildest dreams would I have thought this would be so life changing.</div>
+        <div class="review-text etica"><p>I have to say never in my wildest dreams would I have thought this would be so life changing.</p></div>
     </div>
 
     <div class="rc-box">
@@ -255,7 +235,7 @@
             </div>
             </div>
         </div>
-        <div class="review-text etica">Retreating using red light therapy makes me smile because it feels like 🌞 and a mini vacation where you can release tensions and heavy thoughts while you relax.</div>
+        <div class="review-text etica"><p>Retreating using red light therapy makes me smile because it feels like 🌞 and a mini vacation where you can release tensions and heavy thoughts while you relax.</p></div>
     </div>
 
     <div class="rc-box">
@@ -268,7 +248,7 @@
             </div>
             </div>
         </div>
-        <div class="review-text etica">...the heat is so incredibly efficient that it allows you to get a much better sweat in far less time.</div>
+        <div class="review-text etica"><p>...the heat is so incredibly efficient that it allows you to get a much better sweat in far less time.</p></div>
     </div>
 
     </div>
