--- a/sections/metafield-product.liquid
+++ b/sections/metafield-product.liquid
@@ -214,7 +214,7 @@
       </media-gallery>
     </div>
     <div class="product__info-wrapper grid__item{% if settings.page_width > 1400 and section.settings.media_size == "small" %} product__info-wrapper--extra-padding{% endif %}">
-      <div id="ProductInfo-{{ section.id }}" class="product__info-container{% if section.settings.enable_sticky_info %} product__info-container--sticky{% endif %}">
+      <div id="ProductInfo-{{ section.id }}" class=" product-text product__info-container{% if section.settings.enable_sticky_info %} product__info-container--sticky{% endif %}">
         {%- assign product_form_id = 'product-form-' | append: section.id -%}
         {% comment %}
         <div class="stickyBG">
@@ -228,7 +228,7 @@
         </div>
         {% endcomment %}
 
-        <div class="product-text">
+        <div class="">
         	{%- for block in section.blocks -%}
             {%- case block.type -%}
             {%- when '@app' -%}
