--- a/sections/contact-form.liquid
+++ b/sections/contact-form.liquid
@@ -55,19 +55,19 @@
 
 <div class="tanBG">
 <div class="contact-tiles">
-  <a href="https://help.sauna.space/order-status" class="contact-tile" target="_blank">
+  <a href="https://help.sauna.space/order-status" class="contact-tile">
     <div class="ct-text">
       <div class="ct-head">Order Status</div>
       <div class="ct-link arrow-link">View order status FAQ</div>
     </div>
   </a>
-  <a href="shipping-and-returns.html" class="contact-tile">
+  <a href="/pages/shipping-and-returns" class="contact-tile">
     <div class="ct-text">
       <div class="ct-head">Returns & Exchanges</div>
       <div class="ct-link arrow-link">View our policy</div>
     </div>
   </a>
-  <a href="warranty.html" class="contact-tile">
+  <a href="/pages/warranty" class="contact-tile">
     <div class="ct-text">
       <div class="ct-head">Warranty</div>
       <div class="ct-link arrow-link">View our policy</div>
