--- a/assets/base.css
+++ b/assets/base.css
@@ -1141,6 +1141,15 @@ deferred-media {
   display: block;
 }
 
+/* pricing */
+.price-item.price-item--sale.price-item--last, .price-item.price-item--regular.pt-price.etica {
+	font-size: 13px;
+}
+
+.card__content {
+	cursor: pointer;
+}
+
 /* component-button */
 /* Button - default */
 
