--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -38,7 +38,7 @@
 				<div class="fl-cols">
 					<div class="fl-col">
 						<div class="fl-head">Shop</div>
-						<a href="/pages/infared-saunas">Saunas</a>
+						<a href="/pages/infrared-saunas">Saunas</a>
 						<a href="/pages/targeted-therapy">Targeted Therapy</a>
 						<a href="/pages/sauna-components">Sauna Components</a>
 						<a href="/products?filter=replacement-bulbs">Bulbs</a>
@@ -89,6 +89,14 @@
 <script src="{{ 'ScrollTrigger.min.js' | asset_url }}" defer="defer"></script>
 <script src="{{ 'pin-animation.js' | asset_url }}" defer="defer"></script>
 
+<script async type="text/javascript" src="https://static.klaviyo.com/onsite/js/klaviyo.js?company_id=HJAdDq"></script>
+
+<!-- REFERSION TRACKING: BEGIN -->
+<script src="//saunaspace.refersion.com/tracker/v3/pub_b0a73fb107562b264f2e.js"></script>
+<script>_refersion();</script>
+<!-- REFERSION TRACKING: END -->
+
+<script type="text/javascript" async="" src="https://track.klickly.com/track.bundle.js?shop=saunaspace.myshopify.com"></script>
 <!-- justuno -->
 <script data-cfasync="false">window.ju_num="14AD717D-6F02-491D-B26D-C3805052C81E";window.asset_host='//cdn.jst.ai/';(function(i,s,o,g,r,a,m){i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)};a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script',asset_host+'vck.js','juapp');</script>
 
