--- a/sections/metafield-product.liquid
+++ b/sections/metafield-product.liquid
@@ -529,7 +529,8 @@
                     <p class="fineprint">Check your eligibility in minutes at checkout.</p>
                 </div>
             </div>
-            
+            <p style="font-style: italic; font-size: 1.2rem; text-align: right; margin-top: -1em;"><strong>SKU: </strong><span class="theSKU">{% assign current_variant = product.selected_or_first_available_variant %}
+              <span class="variant-sku">{{ current_variant.sku }}</span></span>&nbsp;&nbsp;<strong>UPC: </strong><span class="theUPC">{{ current_variant.barcode }}</span></p>
 
               {{ 'component-pickup-availability.css' | asset_url | stylesheet_tag }}
 
@@ -553,9 +554,7 @@
               </pickup-availability>
             </div>
               
-             
-
-            <script src="{{ 'pickup-availability.js' | asset_url }}" defer="defer"></script>
+                 <script src="{{ 'pickup-availability.js' | asset_url }}" defer="defer"></script>
           {%- when 'rating' -%}
             {%- if product.metafields.reviews.rating.value != blank -%}
               {% liquid
