--- a/sections/reviews-page.liquid
+++ b/sections/reviews-page.liquid
@@ -97,7 +97,7 @@
             
             <div class="rc-box">
                 <div class="rcb-name">
-                    <img src="{{ 'thomas-cowan.jpg' | asset_url }}" alt="Thomas Cowan">
+                    <img src="{{ 'thomas-cowan.jpeg' | asset_url }}" alt="Thomas Cowan">
                     <div class="rcb-text">
                         <div class="review-name">Thomas Cowan</div>
                         <div class="review-title etica">MD, Author and Founder of Dr. Cowan's Garden</div>
@@ -111,7 +111,7 @@
             
             <div class="rc-box">
                 <div class="rcb-name">
-                    <img src="{{ 'ken-sharlin.jpg' | asset_url }}" alt="Ken Sharlin">
+                    <img src="{{ 'ken-sharlin.jpeg' | asset_url }}" alt="Ken Sharlin">
                     <div class="rcb-text">
                         <div class="review-name">Ken Sharlin</div>
                         <div class="review-title etica">MD, MPH, IFMP, Author</div>
@@ -125,7 +125,7 @@
             
             <div class="rc-box">
                 <div class="rcb-name">
-                    <img src="{{ 'anthony-kunkel.jpg' | asset_url }}" alt="Anthony Kunkel">
+                    <img src="{{ 'anthony-kunkel.jpeg' | asset_url }}" alt="Anthony Kunkel">
                     <div class="rcb-text">
                         <div class="review-name">Anthony Kunkel</div>
                         <div class="review-title etica">Long distance runner</div>
@@ -139,7 +139,7 @@
             
             <div class="rc-box">
                 <div class="rcb-name">
-                    <img src="{{ 'cheyenne.jpg' | asset_url }}" alt="JP “Young Savage” and Cheyenne “Warrior Princess” Buys">
+                    <img src="{{ 'cheyenne.jpeg' | asset_url }}" alt="JP “Young Savage” and Cheyenne “Warrior Princess” Buys">
                     <div class="rcb-text">
                         <div class="review-name">JP “Young Savage” and Cheyenne “Warrior Princess” Buys</div>
                         <div class="review-title etica">UFC fighters</div>
@@ -153,7 +153,7 @@
             
             <div class="rc-box">
                 <div class="rcb-name">
-                    <img src="{{ 'rico-zulkarnain.jpg' | asset_url }}" alt="Rico Zulkarnain">
+                    <img src="{{ 'rico-zulkarnain.jpeg' | asset_url }}" alt="Rico Zulkarnain">
                     <div class="rcb-text">
                         <div class="review-name">Rico Zulkarnain</div>
                         <div class="review-title etica">UK's Most Successful Futsal Star</div>
