--- a/sections/metafield-product.liquid
+++ b/sections/metafield-product.liquid
@@ -492,7 +492,14 @@
             <div class="op-30day-box">
                 
                     <div class="op-30day">
-                        <div style="width: 100%;"><strong>Order Processing:</strong> <span id="orderProcessing">1–3 days</span>.</div>
+                        <div style="width: 100%;"><strong>Order Processing:</strong> <span id="orderProcessing">
+                          {% if product.metafields.lead-time.leadtime != blank %}
+                         {{product.metafields.lead-time.leadtime}}.
+                         {% else %}
+                          1–3 days.
+                          {% endif %}
+                        </span>            
+                        </div>
                     </div>
                     <p class="fineprint oos-fineprint"  style="width: 100%; margin-top: .5em; ">Processing time is an estimate of time between your order being placed and your product being shipped.</p>
                 
@@ -711,7 +718,16 @@
   	{% if product.metafields.my_fields.features_section_4 != blank %}
 		{{ product.metafields.my_fields.features_section_4 }}
     {% endif %}
-  	
+  	<div class="yotpo yotpo-main-widget" data-product-id="{{ product.id }}" data-name="{{ product.title | escape }}" data-url="{{ shop.url }}{{ product.url }}" data-image-url="{{ product.featured_image | product_img_url: "large" |replace: '?', '%3F' | replace: '&','%26'}}" data-description="{{ product.description | escape }}"></div>
+    <section>
+      <h2>Feel the #Saunaspace Love</h2>
+      <div
+      class="yotpo yotpo-pictures-widget"
+      data-gallery-id="{{product.metafields.yotpo-gallery.yotpogallery}}">
+    </div>
+
+    </section>
+
   
 
 {% javascript %}
@@ -1443,3 +1459,4 @@ function formatPlug (plug) {
   ]
 }
 {% endschema %}
+
